--- a/apps/website/src/index.css
+++ b/apps/website/src/index.css
@@ -49,7 +49,7 @@
     @apply flex w-screen h-screen bg-white items-center justify-center
   }
   .wrapper {
-    @apply w-[98%] h-[95%] bg-background rounded-3xl
+    @apply w-full h-full bg-background
   }
 }
 
