--- a/apps/website/src/index.css
+++ b/apps/website/src/index.css
@@ -4,25 +4,48 @@
 
 @layer base {
   :root {
-    --background: 240 60% 1%;
-    --foreground: 246 76% 95%;
-    --card: 240 60% 1%;
-    --card-foreground: 246 76% 95%;
-    --popover: 240 60% 1%;
-    --popover-foreground: 246 76% 95%;
-    --primary: 243 68% 52%;
-    --primary-foreground: 246 76% 95%;
-    --secondary: 243 100% 7%;
-    --secondary-foreground: 246 76% 95%;
-    --muted: 240 61% 80%;
-    --muted-foreground: 246 76% 95%;
-    --accent: 242 100% 38%;
-    --accent-foreground: 246 76% 95%;
-    --destructive: 0 62% 30%;
-    --destructive-foreground: 246 76% 10%;
-    --border: 240 60% 60%;
-    --input: 240 61% 80%;
-    --ring: 242 100% 60%;
+    --background: 240 10% 3.9%;
+    --foreground: 0 0% 98%;
+
+    --muted: 240 3.7% 15.9%;
+    --muted-foreground: 240 5% 64.9%;
+
+    --accent: 240 3.7% 15.9%;
+    --accent-foreground: 0 0% 98%;
+
+    --popover: 240 10% 3.9%;
+    --popover-foreground: 0 0% 98%;
+
+    --border: 240 3.7% 15.9%;
+    --input: 240 3.7% 15.9%;
+
+    --card: 240 10% 3.9%;
+    --card-foreground: 0 0% 98%;
+
+    --primary: 0 0% 98%;
+    --primary-foreground: 240 5.9% 10%;
+
+    --secondary: 240 3.7% 15.9%;
+    --secondary-foreground: 0 0% 98%;
+
+    --destructive: 0 62.8% 30.6%;
+    --destructive-foreground: 0 0% 98%;
+
+    --info: 204 94% 94%;
+    --info-foreground: 199 89% 48%;
+
+    --success: 149 80% 40%;
+    --success-foreground: 160 84% 39%;
+
+    --warning: 48 96% 45%;
+    --warning-foreground: 25 95% 53%;
+
+    --error: 0 93% 50%;
+    --error-foreground: 0 84% 60%;
+
+    --ring: 240 4.9% 83.9%;
+
+    --radius: 0.5rem;
   }
 }
 
