--- a/apps/web/app/globals.css
+++ b/apps/web/app/globals.css
@@ -4,25 +4,48 @@
 
 @layer base {
     :root {
-      --background: 158 40% 4%;
-      --foreground: 163 44% 94%;
-      --card: 158 40% 4%;
-      --card-foreground: 163 44% 94%;
-      --popover: 158 40% 4%;
-      --popover-foreground: 163 44% 94%;
-      --primary: 164 44% 75%;
-      --primary-foreground: 158 40% 4%;
-      --secondary: 201 45% 35%;
-      --secondary-foreground: 163 44% 94%;
-      --muted: 158 39% 80%;
-      --muted-foreground: 163 44% 94%;
-      --accent: 220 45% 55%;
-      --accent-foreground: 158 40% 4%;
+      --background: 244 100% 97%;
+      --foreground: 246 100% 4%;
+      --card: 244 100% 97%;
+      --card-foreground: 246 100% 4%;
+      --popover: 244 100% 97%;
+      --popover-foreground: 246 100% 4%;
+      --primary: 243 99% 51%;
+      --primary-foreground: 244 100% 97%;
+      --secondary: 306 98% 74%;
+      --secondary-foreground: 246 100% 4%;
+      --muted: 244 100% 20%;
+      --muted-foreground: 246 100% 70%;
+      --accent: 325 99% 62%;
+      --accent-foreground: 246 100% 4%;
+      --destructive: 0 85% 60%;
+      --destructive-foreground: 246 100% 4%;
+      --border: 244 100% 20%;
+      --input: 244 100% 20%;
+      --ring: 325 99% 40%;
+      --radius: 0.5rem;
+    }
+   
+    .dark {
+      --background: 244 100% 3%;
+      --foreground: 246 100% 96%;
+      --card: 244 100% 3%;
+      --card-foreground: 246 100% 96%;
+      --popover: 244 100% 3%;
+      --popover-foreground: 246 100% 96%;
+      --primary: 243 99% 49%;
+      --primary-foreground: 246 100% 96%;
+      --secondary: 306 98% 26%;
+      --secondary-foreground: 246 100% 96%;
+      --muted: 244 100% 80%;
+      --muted-foreground: 246 100% 96%;
+      --accent: 325 99% 38%;
+      --accent-foreground: 246 100% 96%;
       --destructive: 0 62% 30%;
-      --destructive-foreground: 162 45% 10%;
-      --border: 158 40% 60%;
-      --input: 158 39% 80%;
-      --ring: 220 45% 60%;
+      --destructive-foreground: 246 100% 10%;
+      --border: 244 100% 60%;
+      --input: 244 100% 80%;
+      --ring: 325 99% 60%;
     }
 }
 
